# themeflick

./: .gitignore  README.md  app.py  freeze.py  requirements.txt  walkthrough.md
.codex/: scratchpad.md
.github/workflows/: deploy.yml
api/: .env.example  Cargo.toml
api/src/: lib.rs  main.rs  tmdb.rs
scripts/: dev.sh  verify.sh
static/css/: navbar.css  style.css
static/js/: favorites.js  main.js
templates/: about.html  base.html  favorites.html  index.html  movie_details.html
web/: .env.example  package-lock.json  package.json  vite.config.ts
web/src/: App.css  App.tsx  api.ts  index.css  main.tsx  types.ts
web/src/components/: Loader.tsx  MovieCard.tsx
web/src/lib/: favorites.ts  recommendationEngine.test.ts  recommendationEngine.ts
web/src/pages/: FavoritesPage.tsx  HomePage.tsx  MovieDetailsPage.tsx
